--- a/src/App.css
+++ b/src/App.css
@@ -118,10 +118,10 @@ button {
 html,
 body {
   width: 100%;
-  height: 100vh;
+  height: auto;
   background: #000100;
   color: white;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 ul {
@@ -158,16 +158,19 @@ img {
   padding: 20px 30px;
   color: rgba(255, 255, 255, 0.5);
 }
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap");
 
 #text1 {
-  position: absolute;
-  top: 400px;
+  position: fixed;
+  top: 330px;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
   width: 900px;
   z-index: 1;
-  font-family: "Heebo", sans-serif;
+  font-family: "Roboto", sans-serif;
+
+  /* font-family: "Heebo", sans-serif; */
 }
 
 .col {
@@ -185,11 +188,11 @@ img {
 }
 
 .img-3 {
-  position: absolute;
+  position: fixed;
   top: 700px;
   right: 30px;
   transform: translateY(-40%);
-  background: url("./component/back1-removebg-preview.png") no-repeat;
+  background: url("./component/images/back1-removebg-preview.png") no-repeat;
   background-position: center;
   background-size: cover;
   width: 300px;
@@ -223,4 +226,26 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"); */
+.btnDiv {
+  display: flex;
+  position: fixed;
+  top: 600px;
+  left: 40%;
+  height: 70px;
+  border-radius: 40px;
+  width: 300px;
+  background-color: rgb(255, 255, 255);
+  font-family: "Roboto", sans-serif;
+  font-size: 24px;
+  color: #000100;
+  /* padding: 10px; */
+  box-sizing: content-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
