--- a/src/App.css
+++ b/src/App.css
@@ -335,7 +335,7 @@ img {
 }
 
 .container2 {
-  height: 820px;
+  height: 120vh;
   width: 100%;
   background: linear-gradient(#2b1055, #7597de);
   background-size: contain;
@@ -363,7 +363,7 @@ img {
   position: absolute;
   border-radius: 10px;
   left: 37%;
-
+  top: 30%;
   cursor: pointer;
 }
 .btnMount button {
@@ -397,11 +397,12 @@ img {
 .video-responsive iframe {
   left: 0;
   top: 0;
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 80%;
   position: absolute;
   margin-top: 20px;
   border-radius: 30px;
+  margin-left: 10%;
 }
 
 .drpDwn {
